# WSL_Training

./: .gitconfig  .gitignore  home_work copy  practical2  practical_02.ipynb  test copy.py  test.py  test_theory.ods  theory.txt
0.0/: 02.pgm  solver.py
0.0 copy/: 00.pgm  01.pgm  ans.txt
0.0 copy 2/: solver.py
0.1 copy/: 00.pgm  01.pgm  02.pgm  ans.txt
0.2/: 00.pgm  01.pgm
0.2 copy/: 02.pgm  ans.txt
0.3/: 00.pgm  01.pgm  02.pgm  ans.txt
0.4/: ans.txt
0.4 copy/: 00.pgm  01.pgm  02.pgm
0.5/: ans.txt
0.5 copy/: 00.pgm  01.pgm  02.pgm
0.6 copy/: 00.pgm  01.pgm  02.pgm  ans.txt
0.7/: 01.pgm  ans.txt
0.7 copy/: 00.pgm  02.pgm
0.8/: 00.pgm  01.pgm
0.8 copy/: 02.pgm  ans.txt
0.9/: 00.pgm  02.pgm  ans.txt
0.9 copy/: 01.pgm
first/: pyproject.toml
hello/: pyproject.toml
