[tool.poetry]
name = "hello"
version = "0.1.0"
description = ""
authors = ["OlegSofonov <olesof@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
colorama = "^0.4.6"


[tool.poetry.group.dev.dependencies]
ipython = "^8.18.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
